# virtual-machine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  vcpkg.json
.github/workflows/: build_test.yaml
cmake/: config.cmake
cmake/tests/: args.cmake  fundamental.cmake
examples/binaries/: code.vm
inc/: computer.hpp  cpu.hpp  memory.hpp  type.hpp
inc/args/: parsing.h  structure.h
inc/isa/: cpu_isa.h  instruction.h
inc/isa/fundamental/: cpu_isa.h  delegate.h  operator.h  set.h
inc/load/: software.h
inc/secure/: cipher.h  cipher_base64.h  cipher_chacha20.h  cipher_shift.h  cipher_vigenere.h  cipher_xor.h  helper.hpp
inc/system/: computer.h  cpu.h  memory.h  system.h
scripts/: install-vcpkg.sh  vm.bat  vm.sh
src/: main.cpp
src/args/: parser.cpp
src/isa/: instruction.cpp
src/isa/fundamental/: delegate.cpp  ops.hpp.inl
src/load/: software.cpp
src/secure/: cipher_base64.cpp  cipher_chacha20.cpp  cipher_shift.cpp  cipher_vigenere.cpp  cipher_xor.cpp
src/system/: cpu.cpp  memory.cpp
srcripts/: build-by-docker.sh
tests/args/: import.cpp
tests/cmake/: args.cmake
tests/fundamental/: for-loop.cpp  for-loop2.cpp  sw.cpp
